# ProyectoBasePOS

./: .env  pyproject.toml  requirements.txt  setup.cfg
src/: config.py
src/app/: __init__.py  main.py
src/app/__pycache__/: main.cpython-313.pyc.2675000231280
src/app/controller/: __init__.py  category_controller.py  cierre_caja_controller.py  cliente_controller.py  contabilidad_categoria_controller.py  egreso_controller.py  ingreso_controller.py  product_controller.py  proveedor_controller.py  resumen_venta_diaria_controller.py  webhook_controller.py
src/app/services/: message_handler_service.py  webhook_service.py
src/app/utils/: whatsapp_template_utils.py
src/domain/: __init__.py
src/domain/dtos/: categoryDto.py  cierreCajaDto.py  clienteDto.py  contabilidadCategoriaDto.py  egresoDto.py  genericResponseDto.py  ingresoDto.py  productsDto.py  proveedorDto.py  resumenVentaDiariaDto.py
src/domain/entities/: categoryEntity.py  cierreCajaEntity.py  clienteEntity.py  contabilidadCategoriaEntity.py  egresoEntity.py  ingresoEntity.py  productsEntity.py  proveedorEntity.py  resumenVentaDiariaEntity.py
src/domain/enums/: __init__.py  contabilidadEnums.py
src/domain/interfaces/: ICategoryService.py  IClientService.py  IwhatsappClientRepository.py  category_repository_interface.py  cierre_caja_repository_interface.py  cliente_repository_interface.py  contabilidad_categoria_repository_interface.py  egreso_repository_interface.py  (+4 more)
src/infrastructure/: __init__.py  db.py  repository_impl.py
tests/: conftest.py  test_category_repository.py  test_webhook.py
(+24 files in other folders)
