[tool.poetry]
name = "whatsapp-webhook-clean-arch"
version = "0.1.0"
description = "A clean architecture implementation for a WhatsApp webhook integration."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
requests = "^2.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"