[metadata]
name = whatsapp-webhook-clean-arch
version = 0.1.0
description = A clean architecture implementation for a WhatsApp webhook integration.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/whatsapp-webhook-clean-arch
license = MIT

[options]
packages = find:
install_requires =
    Flask
    requests

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*